--- a/app/src/main/res/drawable/ic_vec_add_local.xml
+++ b/app/src/main/res/drawable/ic_vec_add_local.xml
@@ -1,12 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="28dp"
-    android:height="28dp"
-    android:viewportHeight="1024.0"
-    android:viewportWidth="1024.0">
-    <path
-        android:fillColor="@color/vec_white"
-        android:pathData="M394.4,795.9c-26.4,0 -47.9,21.5 -47.9,47.9 0,26.4 21.5,47.9 47.9,47.9 26.4,0 47.9,-21.5 47.9,-47.9C442.3,817.4 420.8,795.9 394.4,795.9z" />
-    <path
-        android:fillColor="@color/vec_white"
-        android:pathData="M631.3,42.1 L157.5,42.1c-39.9,0 -72.3,32.4 -72.3,72.3l0,795.3c0,39.9 32.4,72.3 72.3,72.3l473.9,0c39.9,0 72.3,-32.4 72.3,-72.3L703.6,114.4C703.6,74.5 671.2,42.1 631.3,42.1zM157.5,90.3l473.9,0c13.3,0 24.1,10.8 24.1,24.1l0,595.8L133.4,710.2 133.4,114.4C133.4,101.1 144.2,90.3 157.5,90.3zM631.3,933.7 L157.5,933.7c-13.3,0 -24.1,-10.8 -24.1,-24.1L133.4,762.5l522.1,0 0,147.1C655.4,922.9 644.6,933.7 631.3,933.7z" />
+<vector android:height="32dp" android:viewportHeight="1024.0"
+    android:viewportWidth="1024.0" android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@color/white" android:pathData="M232.5,883.2l-59.7,-59.7 245.3,-243.2 123.7,121.6 17.1,17.1 -55.5,64 -21.3,-19.2 -64,-64z"/>
+    <path android:fillColor="@color/white" android:pathData="M533.3,755.2l-59.7,-59.7 243.2,-243.2 209.1,209.1 -59.7,59.7 -149.3,-149.3z"/>
+    <path android:fillColor="@color/white" android:pathData="M341.3,384m-85.3,0a85.3,85.3 0,1 0,170.7 0,85.3 85.3,0 1,0 -170.7,0Z"/>
+    <path android:fillColor="@color/white" android:pathData="M938.7,896H85.3V128h853.3v768zM170.7,810.7h682.7V213.3H170.7v597.3z"/>
 </vector>
