--- a/app/src/main/res/layout/activity_other_profile.xml
+++ b/app/src/main/res/layout/activity_other_profile.xml
@@ -38,9 +38,10 @@
             android:textColor="@color/ui_black_2"
             android:textSize="18sp" />
 
+
         <TextView
             android:id="@+id/interest_tv"
-            style="@style/TwoTextMain"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/user_signature_tv"
