--- a/app/src/main/res/layout/fragment_song_menu.xml
+++ b/app/src/main/res/layout/fragment_song_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="@dimen/item_padding_16dp">
+    android:padding="8dp">
 
     <LinearLayout
         android:id="@+id/agree_ll"
