--- a/app/src/main/res/layout/item_coin_rank.xml
+++ b/app/src/main/res/layout/item_coin_rank.xml
@@ -31,12 +31,6 @@
             android:layout_height="wrap_content"
             tools:text="鹏君" />
 
-        <TextView
-            android:id="@+id/created_at_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="注册时间" />
-
     </LinearLayout>
 
 
@@ -46,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:textColor="@color/ui_red"
         android:layout_marginRight="16dp"
         tools:text="1点" />
 
