--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,7 +29,7 @@
             app:itemTabSelectIco="@drawable/ic_vec_tab_home_net_press" />
 
         <com.example.q.pocketmusic.view.widget.view.BottomTabView
-            android:id="@+id/home_tab_convert_tab"
+            android:id="@+id/home_tab_search_tab"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
