--- a/app/src/main/res/drawable/ic_vec_type_share.xml
+++ b/app/src/main/res/drawable/ic_vec_type_share.xml
@@ -1,9 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportHeight="1024.0"
-    android:viewportWidth="1024.0">
-    <path
-        android:fillColor="@color/vec_white"
-        android:pathData="M820.9,393.3 L706.5,393.3l0,47.6 114.3,0c26.3,0 47.6,21.3 47.6,47.6l0,338.6c0,26.3 -21.3,47.6 -47.6,47.6L201.9,874.8c-26.3,0 -47.6,-21.3 -47.6,-47.6L154.3,488.6c0,-26.3 21.3,-47.6 47.6,-47.6l114.3,0 0,-47.6L201.9,393.3c-52.6,0 -95.2,42.6 -95.2,95.2l0,338.6c0,52.6 42.6,95.2 95.2,95.2l619,0c52.6,0 95.2,-42.6 95.2,-95.2L916.1,488.6C916.1,436 873.5,393.3 820.9,393.3zM355,308.8l132.6,-132.6 0,445.7c0,13.2 10.6,23.8 23.8,23.8 13.2,0 23.8,-10.6 23.8,-23.8L535.2,178.9l129.6,129.9c4.7,4.7 10.8,7 16.9,7 6.1,0 12.2,-2.3 16.8,-7 9.3,-9.3 9.3,-24.4 0,-33.7L526.9,103.2c-4.4,-4.5 -10.5,-7 -16.8,-7 -0,0 -0,0 -0,0 -6.3,0 -12.3,2.5 -16.8,7L321.3,275.1c-9.3,9.3 -9.3,24.4 0,33.7C330.6,318.1 345.7,318.1 355,308.8z" />
+<vector android:height="32dp" android:viewportHeight="1024.0"
+    android:viewportWidth="1024.0" android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#27323A" android:pathData="M851.8,330.5h-58.9V318.8c0,-42.1 -34.3,-76.5 -76.5,-76.5H515.3c-19.5,0 -60.8,-63.3 -128.3,-63.3H172.4c-42.1,0 -76.5,34.3 -76.5,76.5v511.9c0,41.3 33,74.9 73.9,76.3 0.6,0 1,0.3 1.6,0.3h680.4c42.2,0 76.5,-34.3 76.5,-76.5V407c0,-42.1 -34.3,-76.5 -76.5,-76.5z"/>
+    <path android:fillColor="#79CCBF" android:pathData="M188.4,461.3v306.8c0,13.5 -5.3,24.8 -21.7,24.9 -14.4,-0.1 -20.9,-11.1 -20.9,-25.6V255.5c0,-14.6 11.9,-26.5 26.5,-26.5H387.1c26.1,0 48.4,18.2 68.1,34.2 18.3,15 35.6,29.1 60.2,29.1h201.1c14.6,0 26.5,11.9 26.5,26.5v11.8h-176.9c-40.1,0 -74.3,54.3 -89.1,54.3H265c-42.1,0 -76.5,34.3 -76.5,76.5z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M557,650.1h-98.1l182.4,-240.3 182.2,240.3h-99.3v142.6H557z"/>
+    <path android:fillColor="#F4CE73" android:pathData="M238.4,770.6V461.3c0,-14.6 12,-26.5 26.6,-26.5h212c25.2,0 42.1,-15.6 58.4,-30.8 7.8,-7.2 24.1,-22.2 31.2,-23.5h58.9c-4.6,2.5 -8.7,5.9 -11.7,10.5l0.9,-1.2 -182.2,240.2c-7.7,9.4 -9.2,22.8 -3.8,34.2 5.6,11.6 17.4,19.2 30.2,19.2h64.7v110.6h-289.2c1.4,-7.7 4,-14.4 4,-23.3zM878.4,767.4c0,14.7 -11.9,26.6 -26.6,26.6h-94.3V683.4h66.1c12.5,0 23.4,-6.5 29.1,-17.4a34.8,34.8 0,0 0,3.9 -16c0,-6.8 -2,-13.5 -5.9,-19.1l-183,-241.2c-3.6,-4.1 -7.5,-7 -11.6,-9.2h195.7c14.7,0 26.6,11.9 26.6,26.5v360.4z"/>
 </vector>
