--- a/app/src/main/res/drawable/ic_vec_type_ask.xml
+++ b/app/src/main/res/drawable/ic_vec_type_ask.xml
@@ -4,6 +4,20 @@
     android:viewportHeight="1024.0"
     android:viewportWidth="1024.0">
     <path
-        android:fillColor="@color/vec_white"
-        android:pathData="M547.1,769.3c0,11.7 9.7,21.2 21.7,21.2h329.8c12,0 21.7,-9.5 21.7,-21.2 0,-11.7 -9.7,-21.2 -21.7,-21.2L568.8,748.1c-12,0 -21.7,9.5 -21.7,21.2zM898.5,863.1L412,863.1c-12,0 -21.7,9.5 -21.7,21.2 0,11.7 9.7,21.2 21.7,21.2h486.5c12,0 21.7,-9.5 21.7,-21.2 0,-11.7 -9.7,-21.2 -21.7,-21.2zM428.3,785.2c0.2,-0.3 0.4,-0.6 0.7,-0.8 0.5,-0.5 1.2,-1 1.7,-1.5l348,-340.6c0,0 0,-0 0,-0 0,-0 0,-0 0,-0l64.9,-63.5c27.2,-26.6 42.2,-62.1 42.2,-99.7 0,-37.7 -15,-73.1 -42.2,-99.7l-19.2,-18.8c-27.2,-26.6 -63.4,-41.3 -101.9,-41.3 -38.5,0 -74.7,14.7 -101.9,41.3l-412.9,404.1c-0.5,0.5 -1,1.1 -1.5,1.6 -0.3,0.2 -0.6,0.4 -0.9,0.7 -0.9,0.9 -1.6,1.8 -2.3,2.8 -0.1,0.1 -0.2,0.2 -0.2,0.3 -0.1,0.1 -0.2,0.2 -0.2,0.3 -49,59.5 -92.4,273.1 -97.3,298.1 -1.4,7.1 1,14.4 6.3,19.4 4.1,3.8 9.5,5.8 15,5.8a22.4,22.4 0,0 0,5.2 -0.6c24.6,-5.9 236,-57.6 294.4,-106 0.8,-0.6 1.6,-1.2 2.4,-1.9h-0zM251.2,581.9l319.7,-312.9 161.7,158.3 -319.7,312.9 -161.7,-158.2zM651.2,190.5c19,-18.6 44.3,-28.9 71.2,-28.9 26.9,0 52.2,10.3 71.2,28.9l19.2,18.8c19,18.6 29.5,43.4 29.5,69.7 0,26.3 -10.5,51.1 -29.5,69.7l-49.6,48.5 -161.7,-158.3 49.6,-48.5 0,0zM224.1,615.4l155,151.7c-47.2,25.6 -147.8,56.5 -224.5,76.4 17.1,-78.1 44.6,-180.7 69.6,-228v-0zM224.1,615.4" />
+        android:fillColor="@color/ui_yellow"
+        android:pathData="M1024,0 L384,704 0,576 1024,0Z"
+        android:strokeColor="@color/ui_black_1"
+        android:strokeWidth="16" />
+
+    <path
+        android:fillColor="@color/ui_orange"
+        android:pathData="M1024,0 L1024,896 483.4,732.9 1024,0Z"
+        android:strokeColor="@color/ui_black_1"
+        android:strokeWidth="16" />
+
+    <path
+        android:fillColor="@color/ui_orange"
+        android:pathData="M384,740.5 L364.6,734.3 512,1024 606.9,805.5 476.1,768 496.3,960 384,740.5Z"
+        android:strokeColor="@color/ui_black_1"
+        android:strokeWidth="16" />
 </vector>
