--- a/app/src/main/res/layout/item_dialog_text.xml
+++ b/app/src/main/res/layout/item_dialog_text.xml
@@ -4,5 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/ui_black_2"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     android:paddingLeft="16dp"
     android:textSize="16sp" />
