--- a/app/src/main/res/layout/item_money_support.xml
+++ b/app/src/main/res/layout/item_money_support.xml
@@ -27,8 +27,10 @@
             android:layout_height="wrap_content"
             tools:text="化身孤岛的鲸鱼" />
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/money_tv"
+            android:gravity="center"
+            android:drawableLeft="@drawable/ic_vec_item_money_support"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/md_red_300"
