--- a/app/src/main/res/layout/item_user_share.xml
+++ b/app/src/main/res/layout/item_user_share.xml
@@ -1,27 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_ll"
-    style="@style/TwoTextLinear"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/content_rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="@dimen/item_padding_16dp">
 
-    <TextView
-        android:id="@+id/name_tv"
-        style="@style/TwoTextMain"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/name_tv"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="曲谱名"
+            android:textSize="@dimen/item_three_txt_main" />
+
+        <TextView
+            android:id="@+id/instrument_tv"
+            style="@style/TextAppearance.AppCompat.Caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="乐器"
+            android:textSize="@dimen/item_three_txt_second" />
+
+        <TextView
+            android:id="@+id/content_tv"
+            style="@style/TextAppearance.AppCompat.Caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="曲谱描述"
+            android:textSize="@dimen/item_three_txt_third" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/more_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="化身孤岛的鲸" />
-
-    <TextView
-        android:id="@+id/content_tv"
-        style="@style/TwoTextSecond"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="描述" />
-
-</LinearLayout>
-
-
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        app:srcCompat="@drawable/ic_vec_more" />
+</RelativeLayout>
