--- a/app/src/main/res/layout/item_combination_upload.xml
+++ b/app/src/main/res/layout/item_combination_upload.xml
@@ -14,7 +14,7 @@
         android:id="@+id/head_iv"
         android:layout_width="@dimen/item_head"
         android:layout_height="@dimen/item_head"
-        android:src="@mipmap/ico_launcher" />
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:id="@+id/content_ll"
