--- a/app/src/main/res/layout/notification_download.xml
+++ b/app/src/main/res/layout/notification_download.xml
@@ -14,7 +14,7 @@
             android:id="@+id/notification_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ico_launcher" />
+            android:src="@mipmap/ic_launcher" />
 
         <ProgressBar
             android:id="@+id/notification_pb"
